# MiguelAngelFrancoLeon-MFSU-Fractal-Dynamics

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  manifesto.md  pyproject.toml  requirements.txt  setup.py
.github.io/: PULL_REQUEST_TEMPLATE.md
.github.io/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  scientific_question.md
.github.io/workflows/: ci.yml  docs.yml  publish.yml  tests.yml
Cosmo_Code/: CMB_Simulation_Low_Ell.py
MFSU_CMB_LowEll_Validation/: MFSU_CMB_LowEll_Analysis.ipynb  Planck_TT_low_ell.csv  mfsu_cmb_validation.tex  mfsu_planck_fit.py  readme
data/: co2_diffusion_results.txt
data/diffusion/: co2_diffusion_results.csv
data/difussion/: co2_diffusion_results.csv
data/planck/: processed_cmb_analysis.csv
data/superconductors/: tc_database.csv
mfsu/: __init__.py
mfsu/analysis/: __init__.py  cmb.py  difussion.py  statistical.py  superconductors.py
mfsu/core/: __init__.py  constants.py  equations.py  operators.py
mfsu/fractal_cubes/: infinite_cubes.py
mfsu_gas_validation/: README.md
mfsu_gas_validation/notebook/: MFSU_Gas_Diffusion_Notebook.ipynb
notebook/: Cosmo_Simulation (1).ipynb
notebooks/: MFSU_Simulator.ipynb  lightcell_spectrum_simulation.ipynb
scripts/: cmb_analysis.py  mfsu_analysis.py  nature_figures_mfsu.py  superconductor_analysis.py
scripts/utils/: fractal_tools.py  plotting_utils.py  satistical_analysis.py
src/: MFSU_CMB_Validated.ipynb  MFSU_Wigner.py  analyze_cmb.py  cmb_simulation.py  lightcell_model.py  mfsu_action.py  mfsu_cmb_sim.py  mfsu_dark_matter_simulation.py  mfsu_hubble_sim.py  mfsu_hubble_tension_analysis.py  mfsu_lss_simulation.py  mfsu_propagator_plot.py  mfsu_tc_plot.py  pipleine_data_hubble.py  problema_hubble
src/data/CMB/: Planck_TT_2018.csv
